Upgrade Java runtime from version 17 to 21 LTS